# gomoku_ws

./: CMakeLists.txt  README.md
include/GomokuCLI/: GomokuCLI.h
include/GomokuGUI/: BoardWidget.h  MainWindow.h
include/GomokuLib/: Board.h  Common.h  Game.h
src/: CMakeLists.txt
src/GomokuCLI/: CMakeLists.txt  GomokuCLI.cpp  main.cpp
src/GomokuGUI/: BoardWidget.cpp  CMakeLists.txt  MainWindow.cpp  main.cpp
src/GomokuLib/: Board.cpp  CMakeLists.txt  Game.cpp
tests/: BoardTest.cpp  CMakeLists.txt  GameTest.cpp
